nicknamer/server/tests/snapshots/names_endpoints_tests__cannot_create_name_with_duplicate_discord_id.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: duplicate_discord_id_error
status: 400
content_type: text/html; charset=utf-8
html_body: "<div class=\"alert alert-error\">\n  <svg xmlns=\"http://www.w3.org/2000/svg\" class=\"stroke-current shrink-0 h-6 w-6\" fill=\"none\" viewBox=\"0 0 24 24\">\n    <path stroke-linecap=\"round\" stroke-linejoin=\"round\" stroke-width=\"2\" d=\"M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z\" />\n  </svg>\n  <span>A name entry already exists for this Discord ID. Please use a different Discord ID.</span>\n</div>"
