nicknamer/server/tests/snapshots/names_endpoints_tests__edit_form_endpoint_returns_correct_content_type.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: edit_form_endpoint_content_type_check
status: 200
headers:
  content-type: text/html; charset=utf-8
html_body:
  - "<tr id=\"name-row-1\">"
  - "  <td>777888999</td>"
  - "  <td>"
  - "    <form"
  - "      id=\"edit-form-1\""
  - "      hx-put=\"/names/1\""
  - "      hx-target=\"#name-row-1\""
  - "      hx-swap=\"outerHTML\""
  - "      class=\"inline-block\""
  - "    >"
  - "      <input"
  - "        type=\"text\""
  - "        name=\"name\""
  - "        value=\"EditableTestUser\""
  - "        class=\"input input-bordered input-sm w-full max-w-xs min-w-0\""
  - "        required"
  - "      />"
  - "    </form>"
  - "  </td>"
  - "  <th>"
  - "    <button"
  - "      type=\"submit\""
  - "      form=\"edit-form-1\""
  - "      class=\"btn btn-success btn-sm mr-2\""
  - "    >"
  - "      <svg"
  - "        xmlns=\"http://www.w3.org/2000/svg\""
  - "        class=\"h-4 w-4\""
  - "        fill=\"none\""
  - "        viewBox=\"0 0 24 24\""
  - "        stroke=\"currentColor\""
  - "      >"
  - "        <path"
  - "          stroke-linecap=\"round\""
  - "          stroke-linejoin=\"round\""
  - "          stroke-width=\"2\""
  - "          d=\"M5 13l4 4L19 7\""
  - "        />"
  - "      </svg>"
  - "      Save"
  - "    </button>"
  - "    <button"
  - "      type=\"button\""
  - "      class=\"btn btn-ghost btn-sm\""
  - "      hx-get=\"/names/1\""
  - "      hx-target=\"#name-row-1\""
  - "      hx-swap=\"outerHTML\""
  - "    >"
  - "      Cancel"
  - "    </button>"
  - "  </th>"
  - "</tr>"
